Update about page

--- a/.star-counter-template.md
+++ b/.star-counter-template.md
@@ -1,5 +1,5 @@
-| Repository               |  Stars |
-| :----------------------- | -----: |
+| Repository | Stars |
+| :--------- | ----: |
 {% for repo in repos -%}
-| [{{ repo.name }}](https://github.com/mre/{{ repo.name }}/) | {{ repo.stargazers_count }} ★ |
+| [{{ repo.full_name | safe }}]({{ repo.html_url | safe }}) | {{ repo.stargazers_count }} ★ |
 {% endfor -%}
